# netcdf2ascii_rust

./: Cargo.toml
src/: cli.yaml  log4rs.yaml  main.rs
